I have added a media query for the navbar, to avoid the issue of overlapping with content below it.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -705,8 +705,15 @@ body {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 991px) {
-  #carousel-container {
-    padding-top: 70px;
+  .fixed-top {
+    position: relative;
+    top: auto;
+  }
+  .navbar-collapse {
+    max-height: none;
+  }
+  body {
+    margin: 0;
   }
 }
 
